<resources>
    <string name="app_name">Design</string>
    <string name="username">username</string>
    <string name="change_account_security_title">Change Account Security</string>
    <string name="emailTextView">Email Address(es)</string>
    <string name="email_address_field">Enter Email Address</string>
    <string name="edit_email_btn">Edit Email</string>
    <string name="confirm_email_address_text_view">Confirm Email Address(es)</string>
    <string name="confirm_email_address_field">Confirm Email Address</string>
    <string name="multi_factor_authentication_text_view">Multi Factor Authentication</string>
    <string name="multi_factor_auth_text">MFA only applies to the user/password login method and will be bypassed by SSO. You will need to download the Authentication app to use this feature.</string>
    <string name="set_up_authentication_btn_text">Set Up Authentication</string>
    <string name="passcode_text_view">Enter the secret below in the Authentication app.</string>
    <string name="passcode_btn_text">CLECVXEJB374</string>
    <string name="passcode_text">Passcode</string>
    <string name="passcode_helper_text">Enter the passcode generated in Authentication.</string>
    <string name="passcode_hint_text">Enter Generated Passcode</string>
    <string name="new_password_text_view">New Password</string>
    <string name="confirm_new_password_text_view">Confirm New Password</string>
    <string name="current_password_text_view">Current Password</string>
    <string name="save_btn_text">Save</string>
    <string name="new_password_field_hint">Enter password</string>
    <string name="confirm_new_password_helper_text">Minimum length of 8 characters, minimum of 1 capital letter(s), minimum of 1 number(s).</string>
    <string name="confirm_password_field_hint">Enter password again</string>
    <string name="btnBack_Description">Back Button</string>
    <string name="btnEdit">Edit</string>
    <string name="user_profile_image_description">User Profile Image</string>
    <string name="userName">Haley Jessica</string>
    <string name="userRole">UX Designer</string>
    <string name="reviewedCount">19</string>
    <string name="reviewed">Reviewed</string>
    <string name="interviewCount">14</string>
    <string name="interview">Interview</string>
    <string name="educationCellTitle">Education</string>
    <string name="resumeCellTitle">Resume</string>
    <string name="make_a_resume">Make a resume</string>
    <string name="portfolio">Portfolio</string>
    <string name="appliedCount">27</string>
    <string name="applied">Applied</string>
    <string name="experience">Experience</string>
    <string name="btn_see_all">See all</string>
    <string name="btn_see_less">See less</string>
    <string name="user_resume_detail">Creative UX Designer with 6+ years of experience in optimizing user experience through innovative solutions and dynamic interface designs. Successful in enhancing user engag-ement for well-known brands, providing a compelling user experience to improve brand loyalty and customer retention.</string>
    <string name="user_profile_page_design">User Profile Page Design</string>
    <string name="onecloud_design">OneCloud Design</string>
    <string name="medicine_page_design">Medicine Page Design</string>
    <string name="cough_medicine_title">Cough medicine</string>
    <string name="allTab">All</string>
    <string name="doctorsTab">Doctors</string>
    <string name="facilitiesTab">Facilities</string>
    <string name="drugsTab">Drugs</string>
    <string name="medicine_image_description">medicine image</string>
    <string name="before_deductible">Before deductible</string>
    <string name="deductible_met">Deductible met</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="both_email_does_not_match">Both email does not match</string>
    <string name="passcode_does_not_match">Passcode does not match</string>
    <string name="tfa_dumy_code">CLECVXEJB374</string>
    <string name="both_passwords_does_not_match">Both passwords does not match</string>
    <string name="minimum_length_should_be_8">minimum length should be 8</string>
    <string name="must_contain_one_upper_case_latter">must contain one upper case latter</string>
    <string name="must_contain_one_lower_case_latter">must contain one lower case latter</string>
    <string name="must_contain_one_number">must contain one number</string>
    <string name="invalid_email_format">invalid email format</string>
    <string name="context_description_backbtn">backBtn</string>
    <string name="email_address">meetrajsinh@simformsolution.com</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="cv">CV</string>
    <string name="pdf">pdf</string>
    <string name="content_description_delete_cell">Delete Cell</string>
    <string name="et_hint_number_1">Number 1</string>
    <string name="multiplication">X</string>
    <string name="et_hint_number_2">Number 2</string>
    <string name="addition">+</string>
    <string name="btn_add_numbers">Add numbers</string>
    <string name="btn_select_images">Select Images</string>
    <string name="btn_add_more_images">Add More Images</string>
    <string name="content_description_add_cell">add Cell</string>
    <string name="content_description_delete_spinner_item">delete spinner item</string>
    <string name="content_description_delete_image">delete image</string>
    <string name="title_recyclerview_kt_screen">RecyclerView KT Screen</string>
    <string name="recyclerview_kt_screen">RecyclerView KT Screen</string>
    <string name="textfromStringXML">This text is from string.xml</string>
    <string name="underlinedText"><u>Text With Underline</u></string>
    <string name="lineThroughText"><strike>Text with strike through line</strike></string>
    <string name="simpleText">This is a textView with simple text</string>
    <string name="textWithColor">Text view with color</string>
    <string name="textWithCustomFont">Custom Font</string>
    <string name="boldText">Text style - Bold</string>
    <string name="italicText">Text style - Italic</string>
    <string name="textWithLink">www.google.com</string>
    <string name="textViewWithBg">Text view with background</string>
    <string name="selectableText">This text is selectable</string>
    <string name="textWithShadow">Text view with shadow</string>
    <string name="overFlowTextEnd">Text view with overflow text</string>
    <string name="overFlowTextStart">Text view with overflow text</string>
    <string name="overFlowTextMiddle">Text view with overflow text</string>
    <string name="scrollableText">TextView with scroll \n1\n2\n3\n4\n5</string>
    <string name="clickableText">clickable text</string>
    <string name="longPressText">Long press</string>
    <string-array name="rangeSlider">
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string-array name="monthSpinnerArray">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="sign_in_using_post">Sign in using post</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="login_email_hint">Use: eve.holt@reqres.in</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="dummy_password">cityslicka</string>
    <string name="dummy_email">eve.holt@reqres.in</string>
    <string name="login_password_hint">Use: cityslicka</string>
    <string name="sign_in">Sign In</string>
    <string name="update_user_data">Update User data</string>
    <string name="update_status">Update status:</string>
    <string name="user_id">User Id</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="enter_username">Enter username</string>
    <string name="job">Job</string>
    <string name="enter_job">Enter job</string>
    <string name="update">Update</string>
    <string name="delete_user">Delete User</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete Status:</string>
    <string name="copy_link">Copy Link</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_meeting">Cancel Meeting?</string>
    <string name="description">Description</string>
    <string name="add_cancellation_note_optional">Add cancellation note (Optional)</string>
    <string name="close">Close</string>
</resources>