<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/copy_link_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_12dp"
        android:text="@string/copy_link"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/edit_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_12dp"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/cancel_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_12dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small" />
</LinearLayout>