<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10dp"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/resumeCellTitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_48dp"
        android:background="@color/transparent"
        android:fontFamily="@font/poppins"
        android:text="@string/make_a_resume"
        android:textAllCaps="false"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_0dp"
        android:layout_marginEnd="@dimen/_0dp"
        android:backgroundTint="@color/dark_grey"
        app:cardCornerRadius="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCompanyRole"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semibold"
                android:maxLines="1"
                android:textSize="12sp"
                android:text="@string/userName"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btnPdf"
                app:layout_constraintStart_toEndOf="@+id/btnCV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/userRole"
                android:textAlignment="center"
                android:maxLines="1"
                android:textSize="10sp"
                android:ellipsize="end"
                android:textColor="@color/user_profile_secondary_color"
                app:layout_constraintEnd_toEndOf="@+id/tvCompanyRole"
                app:layout_constraintStart_toStartOf="@+id/tvCompanyRole"
                app:layout_constraintTop_toBottomOf="@+id/tvCompanyRole" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCV"
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginStart="@dimen/_20dp"
                android:backgroundTint="@color/bg_cv"
                android:text="@string/cv"
                android:textSize="8sp"
                app:cornerRadius="@dimen/_20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCompanyRole" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPdf"
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/pdf"
                android:textSize="8sp"
                app:cornerRadius="@dimen/_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCompanyRole" />

            <TextView
                android:id="@+id/tvUserDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:textSize="8sp"
                android:text="@string/user_resume_detail"
                android:fontFamily="@font/poppins"
                android:textColor="@color/user_profile_secondary_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCompanyName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>