<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <View
        android:id="@+id/view_bottom_sheet_anchor"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_5dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCancelMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_meeting"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom_sheet_anchor"
        android:textStyle="bold"
        android:textSize="@dimen/text_bold"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCancelMeeting"
        app:layout_constraintStart_toStartOf="@id/tvCancelMeeting" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20dp"
        android:textSize="@dimen/text_regular"
        android:lines="5"
        android:layout_marginTop="@dimen/_5dp"
        android:padding="@dimen/_5dp"
        android:gravity="top"
        android:hint="@string/add_cancellation_note_optional"
        android:textColorHint="@color/gray_600"
        android:background="@drawable/bg_rounded_border"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelMeeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:backgroundTint="@color/oneCloudPrimaryColor"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseDialog"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:text="@string/close"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCancelMeeting"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>